{
    "name": "New Controls",
    "maps": [
        {
            "name": "movement",
            "id": "6a7547d0-d91a-46b7-bf09-54af6195091e",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "8b061d68-5661-487e-97bf-beca061c921e",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "44b052a2-03e1-4953-817e-459f0e50a204",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "wasd",
                    "id": "96b3dd09-8744-4768-a447-b847dab73cd0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0314f6dc-c6ae-4348-890c-ca8d026c49cc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e603504d-566a-4c7f-8938-28c6d53c5419",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5ad8890e-9dda-4230-bd17-684956c65863",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dc6fb90c-fd96-4547-964a-8a5c8331dd61",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0d746943-8113-45c9-8b65-cf3f0aae9e9d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d52e8e4-8a9e-44ec-824d-11f155471db0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8c9b3cd-22d6-4299-9db9-3e5f2e9ae10b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "6bfcacb8-d131-48e1-9967-0947fbece245",
            "actions": [
                {
                    "name": "lookM",
                    "type": "Value",
                    "id": "2c537b8e-40a6-43dc-945a-b618dab038ca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "lookC",
                    "type": "Value",
                    "id": "586c1d94-ce29-405c-8c0c-356a75e4d619",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd0a1232-e566-4245-b7be-9e15c1781d49",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "lookM",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a55ef28-e88e-43ed-b62b-9b8ded0d7e67",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "lookC",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "etc",
            "id": "5901550d-54f5-4112-b5a5-2f836df2d7d8",
            "actions": [
                {
                    "name": "menuToggle",
                    "type": "Button",
                    "id": "993627ef-fa39-44f6-a924-0f19d4ea5b1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55294805-003a-41cd-ba62-c2e718b33168",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "menuToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e701fa2-fb45-4894-b8a4-e7993bf8023e",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "menuToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}